--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <title>Hospital & Ambulance Trust Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Leaflet CSS for maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -92,7 +94,7 @@
         // Firebase Imports
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
         import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getFirestore, doc, setDoc, onSnapshot, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // --- Firebase Configuration ---
         const userFirebaseConfig = {
@@ -112,6 +114,7 @@
         let isAuthReady = false;
         let localData = { hospitals: [], ambulance: [], awards: [] };
         let map;
+        let initialLoadComplete = false;
 
         const loadingIndicator = document.getElementById('loading-indicator');
         const userIdDisplay = document.getElementById('user-id-display');
@@ -163,46 +166,48 @@
         }
 
         // --- Firestore Data Handling ---
-        async function setupSnapshotListener() {
+        function setupSnapshotListener() {
             if (!isAuthReady || !docRef) return;
-
-            const docSnap = await getDoc(docRef);
-            let needsSave = false;
-
-            if (docSnap.exists()) {
-                const data = docSnap.data();
-                localData.hospitals = data.hospitals || [];
-                localData.ambulance = data.ambulance || [];
-                localData.awards = data.awards || [];
-            }
-
-            if (localData.hospitals.length === 0) {
-                console.log("Hospitals list is empty, loading from file...");
-                localData.hospitals = await loadListFromFile('hospitals');
-                needsSave = true;
-            }
-            if (localData.ambulance.length === 0) {
-                console.log("Ambulance list is empty, loading from file...");
-                localData.ambulance = await loadListFromFile('ambulance');
-                needsSave = true;
-            }
-
-            if (needsSave) {
-                await saveData();
-            }
-
-            onSnapshot(docRef, (snapshot) => {
-                loadingIndicator.classList.add('hidden');
-                if (snapshot.exists()) {
-                    const data = snapshot.data();
-                    localData.hospitals = data.hospitals || [];
-                    localData.ambulance = data.ambulance || [];
-                    localData.awards = data.awards || [];
+        
+            onSnapshot(docRef, async (snapshot) => {
+                if (initialLoadComplete) {
+                    // Subsequent updates from Firestore
+                    if (snapshot.exists()) {
+                        localData = snapshot.data();
+                        renderAll();
+                    }
+                    return;
                 }
-                renderAll();
+
+                // This is the first run
+                let needsSave = false;
+                const data = snapshot.exists() ? snapshot.data() : {};
+                localData = { hospitals: [], ambulance: [], awards: [], ...data };
+
+                if (!localData.hospitals || localData.hospitals.length === 0) {
+                    console.log("Hospitals list is empty, loading from file...");
+                    localData.hospitals = await loadListFromFile('hospitals');
+                    needsSave = true;
+                }
+                if (!localData.ambulance || localData.ambulance.length === 0) {
+                    console.log("Ambulance list is empty, loading from file...");
+                    localData.ambulance = await loadListFromFile('ambulance');
+                    needsSave = true;
+                }
+
+                loadingIndicator.classList.add('hidden');
+                initialLoadComplete = true;
+
+                if (needsSave) {
+                    await saveData(); // This will save and trigger the snapshot listener again, but the `initialLoadComplete` flag will prevent this block from re-running.
+                } else {
+                    renderAll(); // Render with existing data if no file load was needed.
+                }
+
             }, (error) => {
                 console.error("Snapshot listener error:", error);
-                showStatusMessage("Error loading data from the cloud.", "error");
+                showStatusMessage("Error connecting to data sync.", "error");
+                loadingIndicator.classList.add('hidden');
             });
         }
         
@@ -222,14 +227,18 @@
                 loadingIndicator.innerHTML = `Geocoding ${lines.length} ${type}...`;
                 loadingIndicator.classList.remove('hidden');
 
-                const promises = lines.map(async line => {
-                    const name = line.trim();
-                    const coords = await geocodeLocation(name);
-                    return { name, visited: false, count: 0, coords };
+                const promises = lines.map((line, index) => {
+                    return new Promise(resolve => {
+                        // Stagger the API calls to avoid being rate-limited
+                        setTimeout(async () => {
+                            const name = line.trim();
+                            const coords = await geocodeLocation(name);
+                            resolve({ name, visited: false, count: 0, coords });
+                        }, index * 100); 
+                    });
                 });
 
                 const newList = await Promise.all(promises);
-                loadingIndicator.classList.add('hidden');
                 showStatusMessage(`${newList.length} ${type} loaded successfully!`, 'success');
                 return newList;
             } catch (error) {
@@ -239,7 +248,6 @@
                 return [];
             }
         }
-
 
         async function saveData() {
             if (!isAuthReady || !docRef) return;
