--- a/public/profile.html
+++ b/public/profile.html
@@ -244,7 +244,7 @@
                     
                     if (!localData.userProfile?.onboardingCompleted) {
                         setTimeout(() => {
-                            showOnboardingQuestionnaire();
+                            // showOnboardingQuestionnaire(); // This function will be added later
                         }, 500);
                     }
                 }
